--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
 	"scripts": {
 		"tsc": "tsc",
 		"dev": "ts-node-dev src/index.ts",
+		"dev-cli": "ts-node-dev src/cli.ts",
 		"lint": "eslint --ext .ts",
-		"start": "node build/index.js"
+		"start": "node build/index.js",
+		"cli": "node build/cli.js"
 	},
 	"repository": {
 		"type": "git",
@@ -29,7 +31,9 @@
 	"dependencies": {
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
+		"mysql2": "^3.1.2",
 		"pg": "^8.9.0",
-		"sequelize": "^6.28.0"
+		"sequelize": "^6.28.0",
+		"zod": "^3.20.6"
 	}
 }
